# axiomdb

./: .axiomdb-build.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  db.md
benches/comparison/axiomdb_bench/: Cargo.toml
benches/comparison/axiomdb_bench/src/: main.rs
crates/axiomdb-catalog/: Cargo.toml
crates/axiomdb-catalog/src/: bootstrap.rs  lib.rs  notifier.rs  reader.rs  resolver.rs  schema.rs  writer.rs
crates/axiomdb-catalog/tests/: integration_catalog_notifier.rs  integration_catalog_rw.rs  integration_schema_binding.rs
crates/axiomdb-cli/: Cargo.toml
crates/axiomdb-cli/src/: dot.rs  main.rs  repl.rs  table.rs
crates/axiomdb-embedded/: Cargo.toml
crates/axiomdb-embedded/src/: lib.rs
crates/axiomdb-embedded/tests/: integration.rs
crates/axiomdb-index/: Cargo.toml
crates/axiomdb-index/benches/: btree.rs
crates/axiomdb-index/src/: ahi.rs  iter.rs  lib.rs  page_layout.rs  prefix.rs  tree.rs
crates/axiomdb-index/tests/: integration_btree.rs
crates/axiomdb-network/: Cargo.toml
crates/axiomdb-network/src/: lib.rs
crates/axiomdb-network/src/mysql/: auth.rs  charset.rs  codec.rs  commit_coordinator.rs  database.rs  error.rs  group_commit.rs  handler.rs  json_error.rs  lifecycle.rs  mod.rs  packets.rs  plan_cache.rs  prepared.rs  result.rs  session.rs  snapshot_registry.rs  status.rs
crates/axiomdb-network/tests/: integration_concurrency.rs  integration_connection_lifecycle.rs  integration_isolation_levels.rs  integration_open_integrity.rs  integration_protocol.rs
crates/axiomdb-server/: Cargo.toml
crates/axiomdb-server/src/: main.rs
crates/axiomdb-sql/: Cargo.toml
crates/axiomdb-sql/benches/: executor_e2e.rs  parser_comparison.rs  sql_components.rs  sqlite_comparison.rs
crates/axiomdb-sql/src/: analyzer.rs  ast.rs  bloom.rs  clustered_secondary.rs  clustered_table.rs  eval.rs  executor.rs  expr.rs  fk_enforcement.rs  index_integrity.rs  index_maintenance.rs  key_encoding.rs  lexer.rs  lib.rs  partial_index.rs  plan_deps.rs  planner.rs  result.rs  schema_cache.rs  session.rs  table.rs  text_semantics.rs  vacuum.rs
crates/axiomdb-sql/tests/: integration_6_9.rs  integration_aggregate_hash.rs  integration_analyzer.rs  integration_autocommit.rs  integration_clustered_create_index.rs  integration_clustered_create_table.rs  integration_clustered_delete.rs  integration_clustered_insert.rs  integration_clustered_insert_batch.rs  integration_clustered_rebuild.rs  integration_clustered_secondary.rs  integration_clustered_select.rs  integration_clustered_update.rs  integration_clustered_vacuum.rs  integration_date_functions.rs  integration_ddl_parser.rs  integration_delete_apply.rs  integration_dml_parser.rs  integration_errors.rs  integration_eval.rs  integration_executor.rs  integration_executor_ctx.rs  integration_executor_ctx_group.rs  integration_executor_ctx_limit.rs  integration_executor_ctx_on_error.rs  integration_executor_ddl.rs  integration_executor_joins.rs  integration_executor_query.rs  integration_executor_sql.rs  integration_fillfactor.rs  integration_fk.rs  integration_group_concat.rs  integration_index_integrity.rs  integration_index_only.rs  integration_indexes.rs  integration_insert_staging.rs  integration_isolation.rs  integration_lexer.rs  integration_mvcc_indexes.rs  integration_namespacing.rs  (+6 more)
crates/axiomdb-storage/: Cargo.toml
crates/axiomdb-storage/benches/: storage.rs
crates/axiomdb-storage/src/: clustered_internal.rs  clustered_leaf.rs  clustered_overflow.rs  clustered_tree.rs  config.rs  dirty.rs  doublewrite.rs  engine.rs  freelist.rs  heap.rs  heap_chain.rs  integrity.rs  lib.rs  memory.rs  meta.rs  mmap.rs  page.rs  page_ref.rs  zone_map.rs
crates/axiomdb-storage/tests/: integration_clustered_tree.rs  integration_storage.rs
crates/axiomdb-types/: Cargo.toml
crates/axiomdb-types/benches/: row_codec.rs
crates/axiomdb-types/src/: codec.rs  coerce.rs  field_patch.rs  lib.rs  types.rs  value.rs
crates/axiomdb-types/tests/: integration_row_codec.rs
crates/axiomdb-wal/: Cargo.toml
crates/axiomdb-wal/src/: checkpoint.rs  clustered.rs  entry.rs  fsync_pipeline.rs  lib.rs  reader.rs  recovery.rs  rotation.rs  sync.rs  txn.rs  writer.rs
crates/axiomdb-wal/tests/: integration_clustered_recovery.rs  integration_clustered_wal.rs  integration_durability.rs  integration_fsync_pipeline.rs  integration_group_commit.rs  integration_page_write.rs  integration_wal_entry.rs  integration_wal_reader.rs  integration_wal_writer.rs
crates/nexusdb-catalog/: Cargo.toml
crates/nexusdb-catalog/src/: bootstrap.rs  lib.rs  notifier.rs  reader.rs  resolver.rs  schema.rs  writer.rs
crates/nexusdb-catalog/tests/: integration_catalog_notifier.rs  integration_catalog_rw.rs  integration_schema_binding.rs
crates/nexusdb-embedded/: Cargo.toml
crates/nexusdb-embedded/src/: lib.rs
crates/nexusdb-index/: Cargo.toml
crates/nexusdb-index/benches/: btree.rs
crates/nexusdb-index/src/: iter.rs  lib.rs  page_layout.rs  prefix.rs  tree.rs
crates/nexusdb-index/tests/: integration_btree.rs
crates/nexusdb-server/: Cargo.toml
crates/nexusdb-server/src/: main.rs
crates/nexusdb-sql/: Cargo.toml
crates/nexusdb-sql/benches/: parser_comparison.rs  sql_components.rs
crates/nexusdb-sql/src/: analyzer.rs  ast.rs  eval.rs  expr.rs  lexer.rs  lib.rs  result.rs  table.rs
crates/nexusdb-sql/tests/: integration_analyzer.rs  integration_ddl_parser.rs  integration_dml_parser.rs  integration_eval.rs  integration_lexer.rs  integration_table.rs
crates/nexusdb-storage/: Cargo.toml
crates/nexusdb-storage/benches/: storage.rs
crates/nexusdb-storage/src/: config.rs  dirty.rs  engine.rs  freelist.rs  heap.rs  heap_chain.rs  integrity.rs  lib.rs  memory.rs  meta.rs  mmap.rs  page.rs
crates/nexusdb-storage/tests/: integration_storage.rs
crates/nexusdb-wal/: Cargo.toml
crates/nexusdb-wal/src/: checkpoint.rs  entry.rs  lib.rs  reader.rs  recovery.rs  rotation.rs  txn.rs  writer.rs
crates/nexusdb-wal/tests/: integration_durability.rs  integration_wal_entry.rs  integration_wal_reader.rs  integration_wal_writer.rs
(+555 files in other folders)
