[workspace]
resolver = "2"
members = [
    "crates/nexusdb-core",
    "crates/nexusdb-types",
    "crates/nexusdb-storage",
    "crates/nexusdb-wal",
    "crates/nexusdb-index",
    "crates/nexusdb-mvcc",
    "crates/nexusdb-catalog",
    "crates/nexusdb-sql",
    "crates/nexusdb-functions",
    "crates/nexusdb-network",
    "crates/nexusdb-security",
    "crates/nexusdb-replication",
    "crates/nexusdb-plugins",
    "crates/nexusdb-cache",
    "crates/nexusdb-geo",
    "crates/nexusdb-vector",
    "crates/nexusdb-migrations",
    "crates/nexusdb-server",
    "crates/nexusdb-embedded",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.80"
authors     = ["lordmacu"]
license     = "MIT"
repository  = "https://github.com/lordmacu/nexusdb"

[workspace.dependencies]
# Error handling
thiserror = "1"
anyhow    = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent data structures
dashmap = "5"

# Testing / benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing utilities
tempfile = "3"

# Zero-copy casting
bytemuck = { version = "1", features = ["derive"] }

# Configuration file parsing
toml = "1"

# SQL lexer — DFA-based tokenizer
logos = "0.14"

# Internal crates
nexusdb-core    = { path = "crates/nexusdb-core" }
nexusdb-types   = { path = "crates/nexusdb-types" }
nexusdb-storage = { path = "crates/nexusdb-storage" }
nexusdb-wal     = { path = "crates/nexusdb-wal" }
nexusdb-catalog = { path = "crates/nexusdb-catalog" }

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true

[profile.bench]
inherits = "release"
debug    = true
