[workspace]
resolver = "2"
members = [
    "crates/axiomdb-core",
    "crates/axiomdb-types",
    "crates/axiomdb-storage",
    "crates/axiomdb-wal",
    "crates/axiomdb-index",
    "crates/axiomdb-mvcc",
    "crates/axiomdb-catalog",
    "crates/axiomdb-sql",
    "crates/axiomdb-functions",
    "crates/axiomdb-network",
    "crates/axiomdb-security",
    "crates/axiomdb-replication",
    "crates/axiomdb-plugins",
    "crates/axiomdb-cache",
    "crates/axiomdb-geo",
    "crates/axiomdb-vector",
    "crates/axiomdb-migrations",
    "crates/axiomdb-server",
    "crates/axiomdb-cli",
    "crates/axiomdb-embedded",
    "benches/comparison/axiomdb_bench",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.80"
authors     = ["lordmacu"]
license     = "MIT"
repository  = "https://github.com/lordmacu/axiomdb"

[workspace.dependencies]
# Error handling
thiserror = "1"
anyhow    = "1"

# Async runtime
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures    = "0.3"

# Wire protocol
bytes = "1"
sha1  = "0.10"
sha2  = "0.10"
rand  = "0.8"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent data structures
dashmap = "5"

# Probabilistic data structures
bloomfilter = "3"

# Testing / benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing utilities
tempfile = "3"

# Zero-copy casting
bytemuck = { version = "1", features = ["derive"] }

# Configuration file parsing
toml = "1"

# SQL lexer — DFA-based tokenizer
logos = "0.14"

# Internal crates
axiomdb-core    = { path = "crates/axiomdb-core" }
axiomdb-types   = { path = "crates/axiomdb-types" }
axiomdb-storage = { path = "crates/axiomdb-storage" }
axiomdb-wal     = { path = "crates/axiomdb-wal" }
axiomdb-catalog = { path = "crates/axiomdb-catalog" }
axiomdb-index   = { path = "crates/axiomdb-index" }

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true

[profile.bench]
inherits = "release"
debug    = true
