[package]
name        = "axiomdb-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiomdb-core    = { workspace = true }
axiomdb-storage = { workspace = true }
axiomdb-wal     = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
