[package]
name        = "axiomdb-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiomdb-core    = { workspace = true }
axiomdb-storage = { workspace = true }
bytemuck        = { workspace = true }
crc32c          = "0.6"
thiserror       = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "btree"
harness = false
