[package]
name        = "axiomdb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiomdb-core = { workspace = true }
thiserror    = { workspace = true }
crc32c       = "0.6"
bytemuck     = { version = "1", features = ["derive"] }
memmap2      = "0.9"
fs2          = "0.4"
tracing      = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
libc         = "0.2"

[dev-dependencies]
tempfile  = "3"
criterion = { workspace = true }

[[bench]]
name    = "storage"
harness = false
