[package]
name        = "axiomdb-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiomdb-core = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "row_codec"
harness = false
