[package]
name        = "nexusdb-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexusdb-core    = { workspace = true }
nexusdb-storage = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
