[package]
name        = "nexusdb-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexusdb-core  = { workspace = true }
nexusdb-types = { workspace = true }
thiserror     = { workspace = true }
logos         = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "sql_components"
harness = false
