[package]
name        = "nexusdb-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexusdb-core    = { workspace = true }
nexusdb-types   = { workspace = true }
nexusdb-catalog = { workspace = true }
nexusdb-storage = { workspace = true }
nexusdb-wal     = { workspace = true }
thiserror       = { workspace = true }
logos           = { workspace = true }

[dev-dependencies]
criterion    = { workspace = true }
sqlparser    = "0.53"
tempfile     = { workspace = true }

[[bench]]
name    = "sql_components"
harness = false

[[bench]]
name    = "parser_comparison"
harness = false
