[package]
name        = "nexusdb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexusdb-core = { workspace = true }
thiserror    = { workspace = true }
crc32c       = "0.6"
bytemuck     = { version = "1", features = ["derive"] }
