[package]
name        = "nexusdb-wal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexusdb-core    = { workspace = true }
nexusdb-storage = { workspace = true }
thiserror       = { workspace = true }
crc32c          = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
